--- a/library.bib
+++ b/library.bib
@@ -174,13 +174,6 @@
   journal={Our world in data},
   year={2018}
 }
-@article{owidenergy,
-    author = {Hannah Ritchie and Max Roser and Pablo Rosado},
-    title = {Energy},
-    journal = {Our World in Data},
-    year = {2020},
-    note = {https://ourworldindata.org/energy}
-}
 @article{rockstrom2017roadmap,
   title={A roadmap for rapid decarbonization},
   author={Rockstr{\"o}m, Johan and Gaffney, Owen and Rogelj, Joeri and Meinshausen, Malte and Nakicenovic, Nebojsa and Schellnhuber, Hans Joachim},
@@ -190,12 +183,6 @@
   pages={1269--1271},
   year={2017},
   publisher={American Association for the Advancement of Science}
-}
-@techreport{hertwich2019carbon,
-  title={The carbon footprint of material production rises to 23\% of global greenhouse gas emissions},
-  author={Hertwich, Edgar and others},
-  year={2019},
-  institution={Center for Open Science}
 }
 @article{environment2018eco,
   title={Eco-efficient cements: Potential economically viable solutions for a low-CO2 cement-based materials industry},
@@ -327,7 +314,7 @@
 @article{sibileau2021deep,
   title={Deep Renovation: Shifting from exception to standard practice in EU Policy},
   author={Sibileau, Helene and others},
-  journal={Buildings Performance Institute Europe (BPIE,$\}$ November},
+  journal={Buildings Performance Institute Europe (BPIE) November},
   year={2021}
 }
 @misc{pickard2020phasing,
