--- a/results_2.tex
+++ b/results_2.tex
@@ -1,18 +1,89 @@
 \section{Decarbonization roadmaps}
 \label{sec:decarbonization_roadmaps}
 
+The adoption of the Paris Agreement by 190 countries in 2015 marked a significant advancement in the international response to the threat of climate change. The three major CO$_2$ emitters: China, India, and the United States, were not among the over 60 nations that had pledged to achieve carbon neutrality by 2050, according to a 2019 UN announcement, which included the United Kingdom and the European Union (with the exception of Poland).\autocite{summit2019report} Moreover, some nations have pledged to work toward earlier dates. Together, these agreements have led to growing pressure to pursue decarbonization across all industrial sectors.\autocite{hoffmann2021decarbonization}
+
+Applying the Paris Agreement and transitioning to Net Zero Carbon–and consequently–being an energy-efficient society by 2050 impacts the construction lifecycle emissions mainly in two stages: \textbf{1)} processing raw materials, and \textbf{2)} operation of buildings. As stated in McKinsey's analysis\autocite{mckinsey_2020} (fig. x), opportunities to reduce the footprint of a building for the various stakeholders involved in decision-making at the various stages of a project, from financing, design, material selection, and processing, to construction and operation, are addressed. 
+
+Roadmaps are planning instruments, linking shorter-term targets to longer-term goals; helping align the actors and organizations of the industry to instigate technological and institutional breakthroughs to halve anthropogenic emissions each decade.\autocite{rockstrom2017roadmap} To better understand the mechanisms, challenges, and opportunities that materials face as they work toward decarbonization, we will divide the materials into two categories in this study: \textbf{1)} structural materials and \textbf{2)} operational materials. Structural materials are employed for erecting the building (\textit{e.g.} foundations, walls, and load-bearing supports) and operational materials are used for the building’s services (\textit{e.g.} thermal and acoustic insulation, lightning and air conditioning systems).
+
+The manufacturers of the materials with higher GHG emissions, have drawn up these "road maps" -and their evolution over time- not only to prove that the materials they manufacture or commercialize can be zero carbon in 2050 but also to design strategies that enable the sector’s decarbonization.\autocite{aus_2022} According to an analysis made by EXIOBASE system30, the structural materials that contributed most to the total cradle-to-gate GHG emissions in 2015 were iron and steel, being responsible for 32\% of the total GHG emissions of that year, from which the construction sector was responsible for more than 50\% of global emissions;\autocite{worldsteelassociation_2020} cement, lime, and gypsum followed with a 26\%; and within the operational materials, plastics contributed a 13\%.\autocite{hertwich2019material} (figure x) It was estimated that the construction sector was the second largest user, consuming around 10 million tonnes of plastic in 2020 (20\% of a total of 50.7 million tonnes\autocite{plasticseurpo_2021}) there is not enough information about the exact percentage of the packaging used to package construction materials.\autocite{geyer2017production}
+
+There are several manuscripts about material-usage, \textit{e.g.} Hertwich research.\autocite{asbp_2020} The cradle-to-gate GHG global impact emissions of the materials are explained in 3 different categories, where the share is always the share of total global emissions: \textbf{(a)} by industries, \textbf{(b)} by source of GHG emissions (location where emissions occur), and \textbf{(c)} by materials. This study shows that the main industry in charge of the GHG emissions is the construction sector. And that the main impact occurs during the material production; headed by iron, cement and plastic.
+
+The steel, concrete, and plastic decarbonization roadmaps here analyzed are presented by independent bodies, as well as self-assessments from the construction sector itself. A McKinsey study on "the decarbonization challenge for steel",\autocite{hoffmann2021decarbonization} and the Joule journal review on "Low-carbon production of iron and steel"\autocite{fan2021low}, as well as the European project "Green Steel for Europe"\autocite{elkerbout2021impact} presents the different paths that the steel sector has to reach decarbonization in 2050. In the case of cement and concrete, there are several roadmaps and studies on its decarbonization. We take as a reference the Chatham House study,\autocite{lehne2018making} complementing it with the global route presented by the Global Cement and Concrete Association.\autocite{cement2021concrete} Finally, for plastic, we have selected The Alliance for Sustainable Building Products, peer-reviewed by the ASBP Plastics in Construction Group;\autocite{asbp_2020} and the ODI report "Phasing out plastics".\autocite{pickard2020phasing}
+
 \subsection{Materials used for structural purposes}
 \label{sec:materials_used_for_structural_purposes}
 
 \subsubsection{Steel and iron}
 \label{sec:steel_and_iron}
 
+Steel and iron are characterized by being a large and technologically complex industry with high capital intensity. The most recent data available shows that global consumption during 2022 is 1834 million metric tons (Mt), 61 with more than half used by China (Fig. x), though China’s steel demand is projected to gradually decline by around 40\% through 2050\autocite{rissman2020technologies} under the synergistic effect of technology promotion and production structure adjustment. In the short term, China will depend more on technology improvement; in the long term, particularly after 2040, promotion of the production structure adjustment will be the main force.\autocite{zhang2018comprehensive}
+
+The two dominant steel production processes which contribute to 95\% of steel hot metal (HM) production are: \textbf{1)} blast furnace-basic oxygen furnace (BF-BOF) and \textbf{2)} electric arc furnace (EAF), 71\% and 24\% respectively.\autocite{fan2021low} The first, BF-BOF, blows currents of air to turn iron ore, mixed with coal and smelting agents such as limestone, into molten metal. The second, EAF, uses electricity passed through giant electrodes to create a fiery arc in which the temperature reaches 3,000 °C. The furnaces often process recycled scrap metal and scrap substitutes, including pig iron and direct reduced iron (DRI), which is made using natural gas, to produce steel.\autocite{mckinsey_2020}
+
+Utilizing current technology, modern steel mills run close to their practical thermodynamic efficiency limits. Therefore, in order to drastically reduce the overall CO$_2$ emissions from the production of steel, the development of breakthrough technologies is crucial.\autocite{rissman2020technologies} In agreement with prior observations,\autocite{aus_2022} the most efficient pathways to reduce carbon emissions from steel production are: 
+
+\begin{enumerate}
+\item Energy optimization
+\item Increasing the reuse of ferrous scrap in steel production 
+\item Inclusion of organic waste as fuel
+\item Usage of Carbon Capture and Storage (CCS) and Carbon Capture and Utilization (CCU) 
+\end{enumerate}
+
+Additionally, there are other pathways that reduce carbon emissions, but these pathways are still in early stages:
+
+\begin{enumerate}
+\item Substitution from carbon to hydrogen obtained from renewable sources, combined with the use of new and more efficient reducing furnaces.
+\item Directly use of electrical energy in electrolytic furnaces.
+\end{enumerate}
+
+In this work, we are going to thoroughly describe 3 pathways to reduce carbon emissions, since these strategies are the ones that promise the greatest reduction in CO$_2$ emissions.\autocite{elkerbout2021impact}
+
+\begin{enumerate}
+\item \textbf{CCS and CCU implementation}. CCS features in 80\% of countries Long Term Low Emissions and Development Strategies (LEDS), which is a policy instrument that identifies the sources of a country‘s GHG emissions and prioritizes options for their mitigation.\autocite{clapp2010low} This technology is not specific to steel production and cement production; it is also implemented in natural gas and biomass power, fertilizer, and hydrogen production, among others. To the best of our knowledge, there is not accurate data for how much GHG emissions correspond to each sector described above. In 2021, there were 135 CCS facilities worldwide with a 36.6 Mt capture capacity.\autocite{global2021institute}  It consists of capturing CO$_2$ from large emission sources (referred to as point-source capture) and also directly from the atmosphere, and storing it underground in geological formations, lowering the emissions from sectors that are hard to decarbonize, such as steel production.\autocite{portner2022climate} However, the captured emissions can also be utilized: carbon capture and usage (CCU). It uses emissions to create new products for the chemical industry, including ammoniac and bioethanol. According to McKinsey's work,\autocite{hoffmann2021decarbonization} carbon capture and usage are premature strategies from a technological and economic point of view.
+\item \textbf{Hydrogen substitution}. It refers to the use of blue or green hydrogen-based direct reduced iron (DRI) and scrap in combination with EAFs. The process replaces fossil fuels in the DRI production stage with hydrogen produced with renewable energy.\autocite{hoffmann2021decarbonization} Blue H$_2$ (fossil fuel + CCS H$_2$ production) and green H$_2$ supply (renewable electricity + water electrolysis H$_2$ production) show potential and are reasonably mature, with potential for near-term cost decline and production growth.\autocite{henderson2020blue}  European steel players are currently building or already testing hydrogen-based steel production processes, either using hydrogen as a pulverized coal injection (PCI) replacement or using hydrogen-based direct reduction.\autocite{hoffmann2021decarbonization} Since the cost of green H$_2$ is high and unlikely to be cost competitive in most markets.\autocite{fan2021low} 
+\item \textbf{Biomass reductants}. Given the difficulties mentioned above, solid biofuel may be a more practical option for decarbonizing the production of iron and steel than hydrogen gaseous fuel.\autocite{fan2021low} This process uses biomass as an alternative reductant or fuel. As many have documented, biomass must be grown, harvested, processed, and transported with minimal life-cycle CO$_2$ emissions for it to achieve substantial CO$_2$ reductions through fossil fuel substitution.\autocite{langholtz20162016} As such, it is regionally dependent and mainly important in areas where the biomass supply is guaranteed, like in South America or Russia. In Europe, the current availability of biomass is likely not enough to reduce carbon emissions on a large scale.\autocite{hoffmann2021decarbonization}
+\end{enumerate}
+
+
 \subsubsection{Cement and concrete}
 \label{sec:cement_and_concrete}
+
+As a key concrete component, cement is a major contributor to climate change. There is currently no concrete substitute that can meet its functional capacity. Concrete is the most widely used construction material in the world, with more than 4 billion tonnes of cement produced each year, leading to more than 7-8\% of annual anthropogenic GHG emissions, which result from both energy use and chemical reactions.\autocite{cement2021concrete} Nowadays, the global demand is largely driven by China and other Asian countries\autocite{iea_2020} (Fig. x).
+
+From 1990 to 2020, the industry has reduced its emissions proportionately (per unit of product) by around 20\%, predominantly through clinker substitution and fuel-side measures. A significant acceleration of decarbonisation measures needs to take place to achieve the same reduction in only a decade.\autocite{cement2021concrete} Concrete naturally absorbs CO$_2$ since it carbonates throughout the course of its lifecycle. This process is known as recarbonation. Then, after its useful life has ended, it is crushed to be used as recycled aggregate. The total reduction in concrete emissions due to this resorption is calculated at 6\%\autocite{aus_2022} (fig. x). The actions to achieve a net zero concrete industry are: "carbon capture and utilization/storage", which will account for 36\% of the total CO$_2$ emissions savings in 2050, while "efficiency in design and construction" will be responsible for 22\%, and "savings in clinker production" for 11\%. Other actions considered include: improving efficiency in concrete production; the decarbonisation of electricity; and savings in cement and binders. 
+
+According to Lehne \textit{et al.},\autocite{lehne2018making} the 3 main pathways to reduce carbon emissions from concrete production are:
+
+\begin{enumerate}
+\item \textbf{Savings in clinker production}. Clinker substitution is not only a very effective solution but also one that can be deployed cheaply today, as it does not generally require investments in new equipment or changes in fuel sources.\autocite{lehne2018making} Reducing the amount of Portland clinker used by substituting it with clinker substitutes such as fly ash, granulated blast furnace slag (GBFS), limestone, and other experimental materials that can reduce emissions of the whole process by up to 70\%. When combined with electrification using renewable energy sources, they have the potential to reduce emissions by 20\%. The IEA estimates that around 3.7 GJ and 0.83 tonnes of CO$_2$ can be saved per tonne of clinker displaced.\autocite{iea2017energy} The main constraints on clinker substitution tend to be the availability and cost of clinker substitute materials, which vary considerably by region; consumer acceptance; and the barriers imposed by standards and regulations.\autocite{imbabi2012trends}
+\item \textbf{Efficiency in design and construction}. By adopting a new design philosophy, using higher-quality concrete, replacing concrete with alternative materials, increasing the proportion of recycled and reused concrete, and improving the efficiency with which it is used on construction sites, it is possible to reduce the demand for concrete, sometimes by more than 50\%.\autocite{lehne2018making} A 5\% reduction in total emissions caused by the use of concrete is suggested by reducing the amount of cement used in concrete and using renewable energy for transportation.\autocite{aus_2022} 
+\item \textbf{CCS implementation}. By implementing CO$_2$ capture and storage (CCS) or CO$_2$ capture and utilization (CCU) techniques in the clinker manufacturing processes, it is possible to reduce the emissions from the concrete's life cycle that cannot be eliminated by changes in the production and use processes. The development of some novel concretes, which depend on a source of pure captured CO$_2$ for carbonation curing\footnote{The unhydrated cement minerals react with the pure CO$_2$ in the high-pressure atmosphere used to cure the concrete, solidifying it as carbonate.}, could benefit from CCS. Many experts are sceptical about the potential to rapidly scale up CCS since this technique is not commercially operational yet and it only appears in some of the IPCC reduction scenarios. The cost of the technology in comparison to other levers is one of the major issues facing CCS.
+\end{enumerate}
+
+All the improvements described above, seem they would increase the Portland cement price, leading to a competitive decrease in comparison with other materials with cheaper decarbonization (\textit{e.g.} brick, wood, etc.).
 
 \subsection{Materials used for services}
 \label{sec:materials_used_for_services}
 
 \subsubsection{Plastics}
 \label{sec:plastics}
+
+In 2020, 40.5\% of primary non-fiber plastics produced (20 million tonnes) entered use as packaging and 20.4\% (10 million tonnes) as construction;\autocite{plasticseurpo_2021} non fiber plastic waste leaving use was 54\% packaging (141 Mt) and only 5\% construction (12 Mt).\autocite{geyer2017production} In 2018, from the 4 million tonnes of plastic recyclates produced in Europe, 46\% corresponded to the construction sector and 24\% to packaging.\autocite{plasticseurpo_2021}
+
+Data from Plastics Europe states that in 2018 approximately a third of plastic waste was either landfilled or disposed of in some other way, 43\% was burned in energy-recovery incinerators, and the remaining quarter was recycled in the EU.\autocite{asbp_2020} One of the inconveniences with plastic recycling is that, even though we could separate plastics by type, each manufacturer has its own formula (\textit{i.e.} adding flame retardants, colorants, and other products to the plastic), leading to PVC byproducts.\autocite{kommerling_2022}
+
+The largest uses include tubing, piping, ducting and guttering (PVC, PP, HDPE); thermal and acoustic insulation (PUR, PS); door and window frames and other external profiling such as cladding, flooring, soffits and fascia boards, and cabling (PVC); and waterproofing and linings (PE, PVC). These are often long-lasting applications, where the material is fit for purpose for its intended function.\autocite{asbp_2020} In the case of cladding and flooring, they can be ephemeral, especially in fairs, congresses, shops or businesses that often change their location or owner.
+
+The difference in economic incentives between users and suppliers is a market failure. While cheaper initially, plastic components may need to be replaced more often than non-plastic alternatives, obtaining the construction firms the benefit from plastics uniformity, which makes them easier to manufacture and install, requiring less specialist knowledge.\autocite{pickard2020phasing} Moreover, plastic usage has increased by China regulation. In China, official mandates to minimize the use of wood shifted the demand to uPVC profiles (Markets Insider, 2017). Additionally, China is the major plastic consumer with 32\% (fig. X) 
+
+The majority of the alternatives to fossil-based plastics produced in 2050 will be less carbon-intensive as a result of the energy sector's decarbonization.\autocite{pickard2020phasing} These strategies have been concentrated on the emissions embodied in steel and concrete, which are mainly employed for structural purposes (such as foundations, walls and load-bearing supports), with many plastic components not considered in minimum embodied emission analyses.\autocite{elkerbout2021impact} This may be because the embodied emissions in plastics are a small proportion of a building’s total mass. However, the weight is not dependent on the impact on GHG emissions that the material contributes. The WGBC (2019) report\autocite{world2019worldgbc} explicitly mentions plastics, suggesting a more holistic view that includes this material. 
+
+Projects have been developed, such as: the CHARM project, a Government funded project that aims to prevent downcycling by building "plastic-free" housing, optimizing reuse of materials and natural resources through innovative approaches for housing renovation and asset management;\autocite{asbp_2020} in 2015 DUS Architecture studio built a 3D printed urban cabin from bioplastics in Amsterdam. The temporary structure was erected to study possible on-demand housing solutions for the fast growing cities. This is a technique particularly suitable for small temporary dwellings or in disaster areas. According to DUS, 3D printing reduces waste and transport costs, standardizes elements, and can be shredded, fully recycled and reused in new filament.\autocite{lanko2017additive} 
+
+Among the alternatives to reducing the environmental impact of plastics are: extending the lifespan of plastics in the construction industry while taking into account the source of the material added to achieve durability; incorporating policies that make plastics relatively more expensive in order to achieve the competitiveness of materials with a lower impact on GHG emissions during both their production and after they have been used. It might be necessary to supplement this strategy with regulation that limits the options available to producers for building materials, thereby limiting the use of PVC, encouraging alternatives currently available (such as wood, bamboo, and bioplastics). 
+
+
 
