--- a/library.bib
+++ b/library.bib
@@ -582,4 +582,75 @@ market-to-exceed-47-billion-by-2024-1001959130}",
   year={2022},
   publisher={IPCC Geneva, The Netherlands}
 }
+@book{christ2009access,
+  title={Access for all: Approaches to the built environment},
+  author={Christ, Wolfgang},
+  year={2009},
+  publisher={Birkh{\"a}user Basel}
+}
+@article{prisco2019short,
+  title={A short history of the elevator},
+  author={Prisco, J},
+  journal={CNN Style},
+  year={2019}
+}
+@book{sharp2002twentieth,
+  title={Twentieth century architecture: A visual history},
+  author={Sharp, Dennis},
+  year={2002},
+  publisher={Images Publishing}
+}
+@article{biddle2008explaining,
+  title={Explaining the spread of residential air conditioning, 1955--1980},
+  author={Biddle, Jeff},
+  journal={Explorations in Economic History},
+  volume={45},
+  number={4},
+  pages={402--423},
+  year={2008},
+  publisher={Elsevier}
+}
+@article{nagengast1999early,
+  title={Early twentieth century air-conditioning engineering: The first century of air conditioning},
+  author={Nagengast, Bernard},
+  journal={ASHRAE journal},
+  volume={41},
+  number={3},
+  pages={55},
+  year={1999},
+  publisher={American Society of Heating, Refrigeration and Air Conditioning Engineers, Inc.}
+}
+@article{griffith2000bauhaus,
+  title={The Bauhaus, 1919--1933},
+  author={Griffith Winton, Alexandra},
+  journal={Heilbrunn Timeline of Art History. New York: The Metropolitan Museum of Art},
+  year={2000}
+}
+@book{united1921american,
+  title={American Industry in the War: A Report of the War Industries Board},
+  author={United States. War Industries Board},
+  year={1921},
+  publisher={US Government Printing Office}
+}
+@book{mercelis2020beyond,
+  title={Beyond Bakelite: Leo Baekeland and the business of science and invention},
+  author={Mercelis, Joris},
+  year={2020},
+  publisher={MIT Press}
+}
+@phdthesis{bonnefoy2008scalability,
+  title={Scalability of the air transportation system and development of multi-airport systems: A worldwide perspective},
+  author={Bonnefoy, Philippe A},
+  year={2008},
+  school={Massachusetts Institute of Technology}
+}
+@article{bozsaky2010historical,
+  title={The historical development of thermal insulation materials},
+  author={Bozsaky, D{\'a}vid},
+  journal={Periodica Polytechnica Architecture},
+  volume={41},
+  number={2},
+  pages={49--56},
+  year={2010}
+}
 
