--- a/results_1.tex
+++ b/results_1.tex
@@ -1,11 +1,39 @@
 \section{Construction materials from the 20th century to the beginnings of the 21st century}
 \label{sec:construction_materials}
 
+With the expansion of urbanization and the integration of new sources of energy, the construction sector went through different stages during the 20th century. The study of materials gained crucial significance as a result of historical events (\textit{e.g.} WWII and the so-called "space race" during the Cold War) with the requirement—and challenge—to minimize the environmental repercussions of energy use.\autocite{smil2000energy}
+
+In Europe, numerous significant material inventions took place. However, the United States (US) was able to integrate discoveries (\textit{i.e.} technical and technological advancements) at periods when other nations lacked social resources without which a discovery could not be turned into a commercial success.\autocite{buchanan2019history} Furthermore, during WWII, there was a large influx of European scientists to the US, fleeing the war.\autocite{lepage2015atlas} These advancements in technology have not only been made in the field of materials; they have also been made in the field of appliances that have improved the quality of living for users. Every improvement began as a luxury and eventually underwent standardization to become a requirement for the building (including electricity, elevators, refrigerators, air conditioning, etc.).
+
 \subsection{WWI}
 \label{sec:wwi}
 
+The traditional building materials at the beginning of the 20th century were wood, brick, and stone, but these were not entirely effective for contemporary needs,\autocite{jester2014twentieth} which required faster line production to keep up with the ever growing construction demand. A global market and an era of greater accessibility to ever-richer stores of information,\autocite{smil2000energy} spurred by international conflict, emerged as a result of a measure of affluence among rapidly growing populations. 
+
+In 1917, the War Industries Board was established in the US with the mandate of preserving and controlling other industries while promoting the production of those producing essential materials for the war, such as copper, iron, steel, and brass. The difficulty in disposing of government surplus after the war was caused by the high levels of production of goods for the conflict.\autocite{united1921american}  The technological advances made during WWI were applied to various industries after 1918, \textit{e.g.}, in Europe, a year later, the Bauhaus movement was founded in Germany as a result of the country's need for a fresh organization to aid in its post-devastating war reconstruction and the development of a new social structure. Bauhaus design aims for cohesion and simplicity, incorporating the fewest different industrial materials possible.\autocite{griffith2000bauhaus}
+
+Buildings frequently included more than one material. In some instances, adhesives were used to sandwich multiple materials; the result was meant to be a superior and more affordable alternative to the current product,\autocite{jester2014twentieth} increasing unstoppably the list of construction materials in the 20th century with scientific and technological advances,\autocite{laffarga1997resena} including: plywood, which gained recognition in the furniture sector and as sheathing for building houses, it was finally understood that it was more than just a paneled veneer.\autocite{jester2014twentieth}
+
+Advanced steel, concrete, and glass products entered the market as these raw materials were exploited and world trade increased. In contrast to earlier times when only four or five different types of steel were produced,\autocite{jester2014twentieth} by the 1920s a wide variety of alloys were available, better and more affordably satisfying the need to build structural designs that challenged the building's shape and height. Although the nature of the materials was continually evolving, more scientific considerations such as thermal insulation, acoustical control, and lighting were taken into consideration.\autocite{bozsaky2010historical} This gave rise to "modernist architecture" (1900-1930), the first real example of 20th century architecture, designed for "modern man". It used the most up-to-date construction methods and materials, with functionality as its main focus.\autocite{sharp2002twentieth}
+
+The use of the steel frame significantly increased the demand for exterior cladding that would be both firmly fixed and effectively insulating. The increasing use of thermal insulation during the 1920s, even in home construction, represented a new concern for environmental control. When it came to the management and control of steam, heating engineers promoted asbestos as the best solution, and cork was chosen when refrigeration was required. Acoustical experts came up with the idea of perforated tiles as a result of growing urban noise abatement concerns. The improvements in lighting were more pronounced. Additionally, synthetic plastics were significantly advanced thanks to Leo Baekeland, who trademarked his well-known products as Bakelite.\autocite{mercelis2020beyond}
+
+Electricity's widespread use affected how materials and buildings were assembled and installed. The development of portable electric power tools sped up construction.\autocite{jester2014twentieth} While only one in every seven homes had electricity in 1910, this number increased to seven out of ten in 1930, contributing to a huge suburban development that catered to the rising middle class. Skyscrapers sprang up in the downtown areas of many of the largest cities, and citizens now possessed automobiles for commuting to work in the cities.\autocite{sharp2002twentieth}
+
+The third of the 20th century's five major global revolutionary waves occurred between 1930 and 1938.\autocite{grinin202220th}  New housing was promoted during this time as a way to stimulate the economy,\autocite{agueda2016historia} people were moving away from large, costly homes and toward smaller, simpler homes with fewer rooms for ever-smaller families. New materials were introduced by the 1930s' end as a component of the aspirations of the typical homeowner for a promising future. Progressive thinkers in the building sector believed that mass-production methods and scientific research could provide housing for all populations.\autocite{jester2014twentieth} This idea, which persisted up until the 1960s, gave way to social housing architecture, which was created as a response to the post-World War I housing crisis in Europe. These large-scale apartment blocks and low-cost social housing projects were built in a number of significant urban centers.\autocite{sharp2002twentieth} 
+
+While urban planning emerged as a discipline, between research and action, and the profession of urban planner\autocite{claude2006faire} began to take shape, the reflection on the ordering of urban space under the imperatives of hygiene and "comfort" (functionality), with the provision of healthy, family, and affordable housing as the main urgency, nurtured a new thought about the city that was sponsored mainly by the progressive fractions—even "socialist"—of the bourgeoisie and that developed at the same time that, in the most industrial cities of Europe, like Paris and Barcelona, the popular classes were unionized and an opposition labor movement grew.\autocite{agueda2016historia}
+
 \subsection{WWII}
 \label{sec:wwii}
+
+The second transition to a wartime economy of the 20th century was already taking place in the building sector at the beginning of 1940. The government was investing in any company producing strategic materials.\autocite{krausmann2009growth} The most prominent example of a material that was employed to its fullest extent during World War II is perhaps aluminum.\autocite{jester2014twentieth} Through the 1920s and 1930s, aluminum remained generally more expensive than steel. As a result, only trim or alloys were used in buildings. A postwar surplus arose due to increased manufacturing and the development of sandwiched panels in response to the necessity for airplanes during World War II. Aluminum manufacturers sought out new markets while praising how easily the metal could be produced, and lowering its cost by using the electrolytic method.\autocite{laffarga1997resena}
+
+Due to the high demand for steel and copper in defense manufacturing, their usage in housing construction had to cease, so contractors made changes, \textit{e.g.}, concrete was poured without much reinforcement; reflective insulating foil was restricted; fiberglass took the place of the more costly asbestos; extruded pieces for door and window frames and aluminum siding as a replacement for asphalt and asbestos veneers were introduced; and plywood would be used in places where wood paneling could be preferable.\autocite{jester2014twentieth}
+
+An unheard-of demand for new structures resulted from the production of military supply items. An illustration of this is the building of brand-new, large airports in the US and Europe before and during World War II.\autocite{bonnefoy2008scalability} The US alone added 1,284 to the roughly 30 airports that were already there before 1940.\autocite{jester2014twentieth} Later on, camps and cantonments were built around the airports, each with miles of roadways surrounded by barracks, mess halls, hospitals, stores, chapels, and theaters, supported by independent systems to provide electricity, heat, water, and sewage.\autocite{sill1947american}
+
+The post-World War II era, (\textit{i.e.} "Great Acceleration"), was marked by increased consumption and urban development, with traditional building materials, such as bricks and stone, in short supply while more contemporary resources were abundant.\autocite{elhacham2020global} The building products business started to grow along with the economy during the 1950s and 1960s.\autocite{agueda2016historia} Savings accumulated during the war were utilized to finance veterans' financial benefits; the purchase of new household goods fueled suburbanization; and consequently, the construction industry experienced one of its most prosperous periods during this time.\autocite{jester2014twentieth} It was widely believed that mass production would satisfy practically all needs, and in order to achieve mass production, the government needed to actively engage in economic matters and support research and development, frequently in collaboration with universities, producing improvement initiatives like public housing, urban development, and transportation.\autocite{harwood1969emergence}
 
 \subsection{Yom Kippur war}
 \label{sec:yom_kippur_war}
