--- a/results_2.tex
+++ b/results_2.tex
@@ -5,6 +5,22 @@ The adoption of the Paris Agreement by 190 countries in 2015 marked a significan
 
 Applying the Paris Agreement and transitioning to Net Zero Carbon–and consequently–being an energy-efficient society by 2050 impacts the construction lifecycle emissions mainly in two stages: \textbf{1)} processing raw materials, and \textbf{2)} operation of buildings. As stated in McKinsey's analysis\autocite{mckinsey_2020} (fig. x), opportunities to reduce the footprint of a building for the various stakeholders involved in decision-making at the various stages of a project, from financing, design, material selection, and processing, to construction and operation, are addressed. 
 
+\begin{table}[!htb]
+  \caption[List of internal and external stakeholders during the construction lifecycle]{\textbf{List of internal and external stakeholders during the construction lifecycle}. Uppercase letter shows the stakeholder abbreviation implemented in Fig. X.}
+  \begin{scriptsize}
+    \begin{tabulary}{0.65\linewidth}{ccccc}
+      \textbf{Internal stakeholders} & \textbf{External stakeholders}  \\ \hline
+      Financiers (F) &  Power sector (P) \\
+      Developers (D) &  Government (G)   \\
+      Designers (De) &  Financial institutions (F) \\
+      Material suppliers (M) &  Other private sectors (O) \\
+      Contractors (C) & \\
+      Occupiers (O) & \\
+    \end{tabulary}
+  \end{scriptsize}
+  \label{tab:stakeholders}
+\end{table}
+
 Roadmaps are planning instruments, linking shorter-term targets to longer-term goals; helping align the actors and organizations of the industry to instigate technological and institutional breakthroughs to halve anthropogenic emissions each decade.\autocite{rockstrom2017roadmap} To better understand the mechanisms, challenges, and opportunities that materials face as they work toward decarbonization, we will divide the materials into two categories in this study: \textbf{1)} structural materials and \textbf{2)} operational materials. Structural materials are employed for erecting the building (\textit{e.g.} foundations, walls, and load-bearing supports) and operational materials are used for the building’s services (\textit{e.g.} thermal and acoustic insulation, lightning and air conditioning systems).
 
 The manufacturers of the materials with higher GHG emissions, have drawn up these "road maps" -and their evolution over time- not only to prove that the materials they manufacture or commercialize can be zero carbon in 2050 but also to design strategies that enable the sector’s decarbonization.\autocite{aus_2022} According to an analysis made by EXIOBASE system30, the structural materials that contributed most to the total cradle-to-gate GHG emissions in 2015 were iron and steel, being responsible for 32\% of the total GHG emissions of that year, from which the construction sector was responsible for more than 50\% of global emissions;\autocite{worldsteelassociation_2020} cement, lime, and gypsum followed with a 26\%; and within the operational materials, plastics contributed a 13\%.\autocite{hertwich2019material} (figure x) It was estimated that the construction sector was the second largest user, consuming around 10 million tonnes of plastic in 2020 (20\% of a total of 50.7 million tonnes\autocite{plasticseurpo_2021}) there is not enough information about the exact percentage of the packaging used to package construction materials.\autocite{geyer2017production}
